<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <EditText
        android:id="@+id/et_ModifyTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/food_name_hint"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/et_ModifyDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/food_description_hint"
        android:layout_below="@id/et_ModifyTitle"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/et_ModifyCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/add_calorie_amount_hint"
        android:layout_below="@id/et_ModifyDescription"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/et_ModifyIngredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/add_ingredients_hint"
        android:layout_below="@id/et_ModifyCalories"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/et_ModifyLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/add_a_link_hint"
        android:layout_below="@id/et_ModifyIngredient"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/tv_addImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_text"
        android:layout_below="@id/et_ModifyLink"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/bt_addImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_image_bt"
        android:layout_below="@id/tv_addImage"
        android:layout_centerInParent="true"
        android:onClick="addImage"/>

    <Button
        android:id="@+id/bt_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done_button"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:onClick="finished"/>

    <ImageView
        android:id="@+id/modifyImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_below="@id/bt_addImage"/>

</RelativeLayout>